--- a/style.css
+++ b/style.css
@@ -149,14 +149,15 @@ top: 100px;
         margin-left: 10px;
         width: 100px;
         height: 55px;
-        background-color: #00000000;
-        color: white;
+        background-color: #0000007c;
+        color: rgb(255, 255, 255);
         border: solid 1px;
         border-color: white;
         border-radius: 20px 6px 6px 20px;
         font-family: Verdana, sans-serif;
         font-weight: 900;
-        bottom: -50px;
+        top: -50px;
+        position: relative;
     }
 
     #oneb{
@@ -281,8 +282,8 @@ transform: translate(-50%, -50%);
         cursor:pointer;
       }
       .upbutton{
-        width: 380px;
-        height: 100px;
+        width: 250px;
+        height: 70px;
         background-color: rgb(0, 89, 255);
         border: none;
         border-radius: 25px;
@@ -296,7 +297,7 @@ transform: translate(-50%, -50%);
         }
         .info_text{
             width: 380px;
-            height: 580px;
+            height: 400px;
             background-color: #14141463;
             position: absolute;
             left: 0; 
