--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a{
     .svet{
         width: 80%;
   max-width: 550px;
-  box-shadow: 20px -15px 300px 160px rgba(212, 189, 58, 0.856);
+  box-shadow: 20px -15px 300px 160px rgba(212, 150, 58, 0.856);
   position: absolute;
   top: 960px;
     }
@@ -147,13 +147,12 @@ top: 100px;
     }
     .shopbutton{
         margin-left: 10px;
-        width: 100px;
-        height: 55px;
+        width: 150px;
+        height: 80px;
         background-color: #0000007c;
         color: rgb(255, 255, 255);
-        border: solid 1px;
-        border-color: white;
-        border-radius: 20px 6px 6px 20px;
+        border: none;
+        border-radius: 20px;
         font-family: Verdana, sans-serif;
         font-weight: 900;
         top: -50px;
@@ -175,13 +174,15 @@ top: 100px;
         left: 0;
         display: none;
       }
+
+      }
       #okno {
-        height: 90%;
+        height: 400px;
         text-align: center;
-        padding: 15px;
-        border-radius: 35px 35px 0 0;
+        width: 70%;
+        border-radius:  35px;
         position: absolute;
-        top: 250px;
+        top: 10px;
         right: 0;
         bottom: 0;
         left: 0;
@@ -196,6 +197,7 @@ top: 100px;
         100% {opacity: 1;}
       }
 
+
   
       #zatemnenie:target {display: block;}
       .close {
@@ -206,7 +208,7 @@ transform: translate(-50%, -50%);
         height: 7px;
         border-radius: 5px;
         display: inline-block;
-        top:170px;
+        top:150px;
         text-decoration: none;
         background: rgb(255, 255, 255);
         font-size: 14pt;
@@ -220,19 +222,20 @@ transform: translate(-50%, -50%);
         font-weight: 900;
       }
       .button_in_shop{
+        margin: 0 auto;
         height: 90px;
         width: 150px;
         color: white;
-        border-radius: 0 25px 25px 25px;
+        border-radius: 10px;
+        margin-top: 10px;
         position: relative;
-        right: 20%;
         font-family: Verdana, sans-serif;
         font-weight: 500;
         background-color: #292727;
         border: none;
-        text-align: left;
-        flex-direction:column;
+        text-align: center;
         font-size: 15px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         
       }
       #info {
@@ -244,13 +247,22 @@ transform: translate(-50%, -50%);
         left: 0;
         display: none;
       }
-      #inf {
-        height: 90%;
-        text-align: center;
-        padding: 15px;
-        border-radius: 35px 35px 0 0;
+      #auto {
+        background: #38383800;
+        width: 100%;
+        height: 100%;
         position: absolute;
-        top: 250px;
+        top: 0;
+        left: 0;
+        display: none;
+      }
+      #inf {
+        height: 400px;
+        text-align: center;
+        width: 70%;
+        border-radius: 20px;
+        position: absolute;
+        top: 10px;
         right: 0;
         bottom: 0;
         left: 0;
@@ -259,6 +271,22 @@ transform: translate(-50%, -50%);
         opacity: 0;
         animation: ani 0.5s forwards;
       }
+      #infas {
+        height: 400px;
+        text-align: center;
+        width: 70%;
+        border-radius: 20px;
+        position: absolute;
+        top: 10px;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        background:#383838fb;
+        opacity: 0;
+        animation: ani 0.5s forwards;
+      }
+      
       
       @keyframes ani {
         0% {opacity: 0;}
@@ -275,7 +303,7 @@ transform: translate(-50%, -50%);
         height: 7px;
         border-radius: 5px;
         display: inline-block;
-        top:170px;
+        top:240px;
         text-decoration: none;
         background: rgb(255, 255, 255);
         font-size: 14pt;
@@ -284,7 +312,7 @@ transform: translate(-50%, -50%);
       .upbutton{
         width: 250px;
         height: 70px;
-        background-color: rgb(0, 89, 255);
+        background-color: rgb(31, 108, 250);
         border: none;
         border-radius: 25px;
         color: white;
@@ -293,26 +321,9 @@ transform: translate(-50%, -50%);
         margin: 0 auto;
         display: block;
         position: relative;
-        top: 87%;
+        top: 65%;
         }
-        .info_text{
-            width: 380px;
-            height: 400px;
-            background-color: #14141463;
-            position: absolute;
-            left: 0; 
-  right: 0; 
-  top: 30px;
-  margin-left: auto; 
-  margin-right: auto; 
-            border-radius: 20px;
-        }
-        h1{
-            color: white;
-        font-family: Verdana, sans-serif;
-        font-weight: 900;
-        text-align: center;
-        }
+        
         .info_boost{
             color: white;
             text-align: left;
