--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ right: 10px;
     margin: 0 auto;
     top: 350px;
     display: block;
-    width: 350px;
-    height: 350px;
+    width: 450px;
+    height: 450px;
     transition: 0.2s all; 
     box-shadow:none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -75,14 +75,11 @@ a{
         margin: 0; 
         height: 100%; 
         overflow: hidden;
-        opacity: 0;
-        animation: ani 0.5s forwards;
+        
+        
       }
       
-      @keyframes ani {
-        0% {opacity: 0;}
-        100% {opacity: 1;}
-      }
+     
 
     a{
         
@@ -112,10 +109,13 @@ a{
         border-radius: 100%;
         transition: all .2s ease-in-out;
 }
+.coin:active {
+  transform: scale(1.05);
+  transition: .1s;
+}
 
-.сoin:active {
-	transform: scale(1.1);
-	transition: .1s;
+.coin.touch {
+  cursor: pointer;
 }
     input:focus {
         outline:none;
@@ -146,26 +146,27 @@ justify-content: center;
 top: 100px;
     }
     .shopbutton{
-        margin-left: 10px;
-        width: 150px;
-        height: 80px;
-        background-color: #0000007c;
-        color: rgb(255, 255, 255);
-        border: none;
-        border-radius: 20px;
-        font-family: Verdana, sans-serif;
-        font-weight: 900;
-        top: -50px;
-        position: relative;
-    }
-
+      position: fixed;
+      bottom: 150px; /* регулируйте этот параметр для того, чтобы поместить кнопку почти внизу экрана */
+      left: 50%;
+      transform: translateX(-50%);
+      width: 150px;
+      height: 80px;
+      background-color: #0000007c;
+      color: rgb(255, 255, 255);
+      border: none;
+      border-radius: 20px;
+      font-family: Verdana, sans-serif;
+      font-weight: 900;
+  }
+  
     #oneb{
         border-radius: 6px 6px 6px 6px;
     }
     #toob{
         border-radius: 6px 20px 20px 6px;
     }
-    #zatemnenie {
+    #zatemnenies {
         background: rgba(102, 102, 102, 0);
         width: 100%;
         height: 100%;
@@ -174,7 +175,15 @@ top: 100px;
         left: 0;
         display: none;
       }
-
+      #zatemnenie {
+        background: rgba(102, 102, 102, 0);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: none;
+      }
       }
       #okno {
         height: 400px;
@@ -188,14 +197,9 @@ top: 100px;
         left: 0;
         margin: auto;
         background: #383838fb;
-        opacity: 0;
-        animation: ani 0.5s forwards;
       }
       
-      @keyframes ani {
-        0% {opacity: 0;}
-        100% {opacity: 1;}
-      }
+     
 
 
   
@@ -247,6 +251,17 @@ transform: translate(-50%, -50%);
         left: 0;
         display: none;
       }
+
+      #infos {
+        background: #38383800;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: none;
+      }
+
       #auto {
         background: #38383800;
         width: 100%;
@@ -268,8 +283,24 @@ transform: translate(-50%, -50%);
         left: 0;
         margin: auto;
         background:#383838fb;
-        opacity: 0;
-        animation: ani 0.5s forwards;
+        opacity: 100;
+      
+      }
+
+        #inf2 {
+          height: 400px;
+          text-align: center;
+          width: 70%;
+          border-radius: 20px;
+          position: absolute;
+          top: 10px;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          margin: auto;
+          background:#383838fb;
+          opacity: 100;
+
       }
       #infas {
         height: 400px;
@@ -283,15 +314,9 @@ transform: translate(-50%, -50%);
         left: 0;
         margin: auto;
         background:#383838fb;
-        opacity: 0;
-        animation: ani 0.5s forwards;
+
       }
       
-      
-      @keyframes ani {
-        0% {opacity: 0;}
-        100% {opacity: 1;}
-      }
 
   
       #info:target {display: block;}
