--- a/style.css
+++ b/style.css
@@ -21,26 +21,8 @@ top: 860px;
 right: 10px;
 }
 
-.coin{
-    position: relative;
-    margin: 0 auto;
-    top: 350px;
-    display: block;
-    width: 450px;
-    height: 450px;
-    transition: 0.2s all; 
-    box-shadow:none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    border-radius: 100%;
-    overflow: hidden;
-    
-}
-.coin:active{
-    transform: scale(0.98); 
-    /* Scaling button to 0.98 to its original size */ 
-    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
-    /* Lowering the shadow */ 
-}
+
+
 input:focus {
     outline:none;
 }
@@ -98,46 +80,46 @@ a{
     }
 
     .coin{
-        position: relative;
-        margin: 0 auto;
-        top: 280px;
-        display: block;
-        width: 350px;
-        height: 350px;
-        box-shadow:none;
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-        border-radius: 100%;
-        transition: all .2s ease-in-out;
-}
-.coin:active {
-  transform: scale(1.05);
-  transition: .1s;
-}
-
-.coin.touch {
-  cursor: pointer;
-}
+      position: fixed;
+      display: block;
+      width: 450px;
+      height: 450px;
+      box-shadow: none;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      transition: all .2s ease-in-out;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 200px;
+      transition: transform 0.2s ease, opacity 0.2s ease;
+    }
+    
+    .pressed {
+      transform: scale(0.9);
+      opacity: 0.7;
+    }
     input:focus {
         outline:none;
     }
 
     .clicks{
         color: aliceblue;
-        position: relative;
+        position: fixed;
         margin: 0 auto;
         width: 300px;
         height: 300px;
-        top: -80px;
+        top: 30px;
     }
     
-    .click{
-        position: relative;
-        text-align: center;
-        top: -290px;
-        font-size: 70px;
-        font-family: Verdana, sans-serif;
-        font-weight: 900;
-    }
+    .clicks {
+      color: aliceblue;
+      position: fixed;
+      left: 50%;  /* Отступ слева на 50% ширины экрана */
+      top: 30px;
+      margin-left: -150px;  /* Сдвигаем элемент влево на половину ширины элемента */
+      width: 300px;
+      height: 300px;
+  }
+  
     
     .menu{
         position: relative;
@@ -321,21 +303,21 @@ transform: translate(-50%, -50%);
   
       #info:target {display: block;}
       .close {
-        position: fixed;
-left: 50%;
-transform: translate(-50%, -50%);
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
         width: 50px;
         height: 7px;
         border-radius: 5px;
         display: inline-block;
-        top:240px;
+        top: 20px;
         text-decoration: none;
         background: rgb(255, 255, 255);
         font-size: 14pt;
-        cursor:pointer;
+        cursor: pointer;
       }
       .upbutton{
-        width: 250px;
+        width: 230px;
         height: 70px;
         background-color: rgb(31, 108, 250);
         border: none;
