--- a/style.css
+++ b/style.css
@@ -11,6 +11,286 @@ body {
 
 }
 
+body {
+  background-color: #141414;
+  -ms-user-select: none; 
+-moz-user-select: none; 
+-webkit-user-select: none; 
+user-select: none; 
+  margin: 0; 
+  height: 100%; 
+  overfloFhidden;
+  
+  
+}
+
+
+
+a{
+  
+  text-decoration:none;
+  font-family: Verdana, sans-serif;
+  font-weight: 900;
+  
+}
+
+.svet{
+  width: 80%;
+max-width: 550px;
+box-shadow: 20px -15px 300px 160px rgba(212, 150, 58, 0.856);
+position: absolute;
+top: 960px;
+}
+
+.coin{
+width: 400px;
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.clicks{
+  color: aliceblue;
+  position: fixed;
+  margin: 0 auto;
+  width: 300px;
+  height: 300px;
+  top: 30px;
+}
+
+.clicks {
+color: aliceblue;
+position: fixed;
+left: 50%;  /* Отступ слева на 50% ширины экрана */
+top: 30px;
+margin-left: -150px;  /* Сдвигаем элемент влево на половину ширины элемента */
+width: 300px;
+height: 300px;
+}
+
+
+.menu{
+  position: relative;
+display: flex;
+justify-content: center;
+top: 100px;
+}
+.shopbutton{
+position: fixed;
+bottom: 80px; /* регулируйте этот параметр для того, чтобы поместить кнопку почти внизу экрана */
+left: 50%;
+transform: translateX(-50%);
+width: 150px;
+height: 80px;
+background-color: #0000007c;
+color: rgb(255, 255, 255);
+border: none;
+border-radius: 20px;
+font-family: Verdana, sans-serif;
+font-weight: 900;
+}
+
+#oneb{
+  border-radius: 6px 6px 6px 6px;
+}
+#toob{
+  border-radius: 6px 20px 20px 6px;
+}
+#zatemnenies {
+  background: rgba(102, 102, 102, 0);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+#zatemnenie {
+  background: rgba(102, 102, 102, 0);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+}
+#okno {
+  height: 400px;
+  text-align: center;
+  width: 70%;
+  border-radius:  35px;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background: #383838fb;
+}
+
+
+
+
+
+#zatemnenie:target {display: block;}
+.close {
+  position: fixed;
+left: 50%;
+transform: translate(-50%, -50%);
+  width: 50px;
+  height: 7px;
+  border-radius: 5px;
+  display: inline-block;
+  top:150px;
+  text-decoration: none;
+  background: rgb(255, 255, 255);
+  font-size: 14pt;
+  cursor:pointer;
+}
+.shops{
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  font-family: Verdana, sans-serif;
+  font-weight: 900;
+}
+.button_in_shop{
+  margin: 0 auto;
+  height: 90px;
+  width: 150px;
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+  position: relative;
+  font-family: Verdana, sans-serif;
+  font-weight: 500;
+  background-color: #292727;
+  border: none;
+  text-align: center;
+  font-size: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+#info {
+  background: #38383800;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#infos {
+  background: #38383800;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#auto {
+  background: #38383800;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+#inf {
+  height: 400px;
+  text-align: center;
+  width: 70%;
+  border-radius: 20px;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background:#383838fb;
+  opacity: 100;
+
+}
+
+  #inf2 {
+    height: 400px;
+    text-align: center;
+    width: 70%;
+    border-radius: 20px;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background:#383838fb;
+    opacity: 100;
+
+}
+#infas {
+  height: 400px;
+  text-align: center;
+  width: 70%;
+  border-radius: 20px;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background:#383838fb;
+
+}
+
+
+
+#info:target {display: block;}
+.close {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50px;
+  height: 7px;
+  border-radius: 5px;
+  display: inline-block;
+  top: 20px;
+  text-decoration: none;
+  background: rgb(255, 255, 255);
+  font-size: 14pt;
+  cursor: pointer;
+}
+.upbutton{
+  width: 230px;
+  height: 70px;
+  background-color: rgb(31, 108, 250);
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-family: Verdana, sans-serif;
+  font-weight: 900;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  top: 65%;
+  }
+  
+  .info_boost{
+      color: white;
+      text-align: left;
+      top: 10%;
+      position: relative;
+      font-family: Verdana, sans-serif;
+  font-weight: 900;
+  }
+
+
+
 .svet{
     width: 80%;
 max-width: 550px;
